# ACPI

./: .gitignore  Justfile  README.md
.agents/rules/: embedded-architecture.md  platformio-standards.md  telemetry-grafana.md
.agents/skills/esp32-sensor-driver/: SKILL.md
.agents/workflows/: verify-firmware.md
ACPIGPS/: .gitignore  README.md
ACPIGPS/app/: build.gradle.kts  google-services.json
docs/: Documento ACPI.docx  README.md  ble-protocol.md  grafana-setup.md
firmware/pulsera/: .gitignore  CMakeLists.txt  README.md  platformio.ini
firmware/pulsera/include/: config.h  constantes.h
firmware/pulsera/lib/brujula/: README.md  brujula.cpp  brujula.h
firmware/pulsera/lib/comunicacion/: README.md
firmware/pulsera/lib/comunicacion/movil/: movil.cpp  movil.h
firmware/pulsera/lib/comunicacion/semaforo/: README.md  comunicacion_semaforo.h  estructura_semaforo.h  semaforo.cpp  semaforo.h
firmware/pulsera/lib/control/: README.md  fsm.cpp  fsm.h
firmware/pulsera/lib/motores/: README.md  motor.cpp  motor.h
firmware/pulsera/lib/protocolo/: README.md  protocolo_esp.h
firmware/pulsera/lib/sensores/: README.md  mpu6050.cpp  mpu6050.h  qmc5883l.cpp  qmc5883l.h
firmware/pulsera/lib/utils/: README.md  calcular_direccion.cpp  calcular_direccion.h  indicar_error.cpp  indicar_error.h  patrones_vibracion.cpp  patrones_vibracion.h
firmware/pulsera/src/: main.cpp
firmware/pulsera_main/: estructura.h  partitions.csv  pulsera_main.ino
firmware/semaforo/: README.md  platformio.ini
firmware/semaforo/include/: config.h  const.h
firmware/semaforo/lib/brujula/: README.md  controlador_brujula.cpp  controlador_brujula.h
firmware/semaforo/lib/comunicacion/: README.md  (+2 more)
firmware/semaforo/src/: main.cpp
firmware/sender/: const.h  estructura.h  platformio.ini  sender.ino
pcb_design/: design-block-lib-table  fp-lib-table  pcb_design.kicad_pcb  pcb_design.kicad_prl  pcb_design.kicad_pro  pcb_design.kicad_sch  sym-lib-table  ~pcb_design.kicad_pro.lck
pcb_design/libs/: ACPI_QMC6308.kicad_sym
pcb_design/libs/ACPI_QMC6308.3dshapes/: WLCSP-4_L0.8-W0.8-H0.6-P0.4.step  WLCSP-4_L0.8-W0.8-H0.6-P0.4.wrl
pcb_design/libs/ACPI_QMC6308.pretty/: WLCSP-4_L0.8-W0.8-R2-C2-P0.40-BL.kicad_mod
tools/: ACPI_Analyzer.html
(+10 files in other folders)
